--- a/scan/src/main/res/values/attrs.xml
+++ b/scan/src/main/res/values/attrs.xml
@@ -2,15 +2,16 @@
 <resources>
 
     <declare-styleable name="ViewScanMask">
-        <attr name="inner_width" format="dimension"/>
-        <attr name="inner_height" format="dimension"/>
-        <attr name="inner_margintop" format="dimension" />
+        <attr name="inner_frame_width" format="dimension"/>
+        <attr name="inner_frame_height" format="dimension"/>
+        <attr name="inner_frame_margintop" format="dimension" />
         <attr name="inner_corner_color" format="color" />
         <attr name="inner_corner_length" format="dimension" />
         <attr name="inner_corner_width" format="dimension" />
-        <attr name="inner_scan_bitmap" format="reference" />
-        <attr name="inner_scan_speed" format="integer" />
-        <attr name="inner_scan_iscircle" format="boolean" />
+        <attr name="inner_line_bitmap" format="reference" />
+        <attr name="inner_line_speed" format="integer" />
+        <attr name="inner_resultpoint_show" format="boolean" />
+        <attr name="inner_resultpoint_color" format="color" />
     </declare-styleable>
 
 </resources>
