--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -9,12 +9,24 @@
 
     <include layout="@layout/libroot_toolbar"/>
 
-    <Button
-        android:id="@+id/btGotoScan"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="100dp"
-        android:text="进入扫码页面" />
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btBatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
+            android:text="批量扫描" />
+        <Button
+            android:id="@+id/btGotoScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="单笔扫码" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/etInput"
