--- a/scan/src/main/res/values/attrs.xml
+++ b/scan/src/main/res/values/attrs.xml
@@ -8,8 +8,8 @@
         <attr name="inner_corner_color" format="color" />
         <attr name="inner_corner_length" format="dimension" />
         <attr name="inner_corner_width" format="dimension" />
-        <attr name="inner_line_bitmap" format="reference" />
-        <attr name="inner_line_speed" format="integer" />
+<!--        <attr name="inner_line_bitmap" format="reference" />-->
+<!--        <attr name="inner_line_speed" format="integer" />-->
         <attr name="inner_resultpoint_show" format="boolean" />
         <attr name="inner_resultpoint_color" format="color" />
     </declare-styleable>
